--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "parcel public/index.html --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/AntonioErdeljac/js-infinum-pokedex/issues"
   },
-  "homepage": "https://github.com/AntonioErdeljac/js-infinum-pokedex#readme"
+  "homepage": "https://github.com/AntonioErdeljac/js-infinum-pokedex#readme",
+  "dependencies": {
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "7.12.1",
+    "@babel/preset-react": "7.12.1",
+    "parcel-bundler": "1.12.4"
+  }
 }
