feat(babel): add babel config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "browser": true,
     "es2020": true
   },
+  "parser": "babel-eslint",
   "extends": [
     "plugin:react/recommended",
     "airbnb"
@@ -18,5 +19,12 @@
     "react"
   ],
   "rules": {
+    "import/prefer-default-export": 0,
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ]
   }
 }
