--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "7.12.3",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
+    "babel-core": "6.26.3",
+    "babel-eslint": "10.1.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
     "eslint": "7.12.1",
     "eslint-config-airbnb": "18.2.0",
     "eslint-plugin-import": "2.22.1",
