--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "babel-preset-react": "6.24.1",
     "eslint": "7.12.1",
     "eslint-config-airbnb": "18.2.0",
+    "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "parcel-bundler": "1.12.4"
+    "parcel-bundler": "1.12.4",
+    "prettier": "2.1.2"
   }
 }
