feat(bootstrap): add bootstrap

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/AntonioErdeljac/js-infinum-pokedex#readme",
   "dependencies": {
+    "bootstrap": "4.5.3",
     "react": "17.0.1",
+    "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
