--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "bootstrap": "4.5.3",
     "react": "17.0.1",
     "react-bootstrap": "1.4.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
