--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
   "dependencies": {
     "axios": "0.21.0",
     "bootstrap": "4.5.3",
+    "keymirror": "0.1.1",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "styled-components": "5.2.0"
   },
   "devDependencies": {
