--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "0.21.0",
     "bootstrap": "4.5.3",
     "keymirror": "0.1.1",
+    "lodash": "4.17.20",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-bootstrap": "1.4.0",
