--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "17.0.1",
     "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
+    "react-loading-skeleton": "2.1.1",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
