--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel public/index.html --open",
+    "start": "webpack serve --mode development --env development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
@@ -28,7 +29,9 @@
   "homepage": "https://github.com/AntonioErdeljac/js-infinum-pokedex#readme",
   "dependencies": {
     "axios": "0.21.0",
+    "babel-loader": "8.1.0",
     "bootstrap": "4.5.3",
+    "classnames": "2.2.6",
     "keymirror": "0.1.1",
     "lodash": "4.17.20",
     "prop-types": "15.7.2",
@@ -51,6 +54,8 @@
     "babel-eslint": "10.1.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
+    "clean-webpack-plugin": "3.0.0",
+    "css-loader": "5.0.0",
     "eslint": "7.12.1",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.15.0",
@@ -59,9 +64,18 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
     "lint-staged": "10.5.0",
-    "parcel-bundler": "1.12.4",
-    "prettier": "2.1.2"
+    "node-sass": "4.14.1",
+    "postcss": "8.1.4",
+    "postcss-loader": "4.0.4",
+    "postcss-preset-env": "6.7.0",
+    "prettier": "2.1.2",
+    "sass-loader": "10.0.4",
+    "style-loader": "2.0.0",
+    "webpack": "5.3.1",
+    "webpack-cli": "4.1.0",
+    "webpack-dev-server": "3.11.0"
   }
 }
