--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "react-loading-skeleton": "2.1.1",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
-    "redux-thunk": "2.3.0",
-    "styled-components": "5.2.0"
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
