--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "keymirror": "0.1.1",
     "lodash": "4.17.20",
     "prop-types": "15.7.2",
+    "query-string": "6.13.6",
     "react": "17.0.1",
     "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
