feat(eslint): add eslint hooks plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
   },
   "plugins": [
     "prettier",
-    "react"
+    "react",
+    "react-hooks"
   ],
   "rules": {
     "prettier/prettier": "error",
