feat(webpack): add circular dependency plugin, move index html to public folder

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "0.21.0",
     "babel-loader": "8.1.0",
     "bootstrap": "4.5.3",
+    "circular-dependency-plugin": "5.2.0",
     "classnames": "2.2.6",
     "keymirror": "0.1.1",
     "lodash": "4.17.20",
