--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "17.0.1",
     "react-loading-skeleton": "2.1.1",
     "react-redux": "7.2.2",
+    "react-visibility-sensor": "5.1.1",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0"
   },
