feat(animations): add basic animations

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "4.5.3",
     "circular-dependency-plugin": "5.2.0",
     "classnames": "2.2.6",
+    "framer-motion": "2.9.4",
     "keymirror": "0.1.1",
     "lodash": "4.17.20",
     "prop-types": "15.7.2",
