--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "webpack --mode production",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": "eslint"
@@ -35,6 +37,9 @@
     "bootstrap": "4.5.3",
     "circular-dependency-plugin": "5.2.0",
     "classnames": "2.2.6",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-to-json": "3.6.1",
     "framer-motion": "2.9.4",
     "keymirror": "0.1.1",
     "lodash": "4.17.20",
@@ -53,12 +58,14 @@
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@babel/plugin-transform-react-jsx": "7.12.1",
+    "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
+    "babel-jest": "26.6.1",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "clean-webpack-plugin": "3.0.0",
@@ -74,6 +81,7 @@
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
+    "jest": "26.6.1",
     "lint-staged": "10.5.0",
     "node-sass": "4.14.1",
     "postcss": "8.1.4",
