feat(test): add mappers for files and styles, add snapshots to common components, mock hooks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "react-hooks"
   ],
   "rules": {
+    "react/jsx-props-no-spreading": 0,
     "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
     "prettier/prettier": "error",
