--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "enzyme-adapter-react-16": "1.15.5",
     "enzyme-to-json": "3.6.1",
     "framer-motion": "2.9.4",
+    "jest-transform-css": "2.1.0",
     "keymirror": "0.1.1",
     "lodash": "4.17.20",
     "prop-types": "15.7.2",
@@ -82,6 +83,7 @@
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "26.6.1",
     "lint-staged": "10.5.0",
     "node-sass": "4.14.1",
