--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
     "prettier": "2.1.2",
     "sass-loader": "10.0.4",
     "style-loader": "2.0.0",
+    "stylelint": "13.8.0",
+    "stylelint-config-sass-guidelines": "7.1.0",
     "webpack": "5.3.1",
     "webpack-cli": "4.1.0",
     "webpack-dev-server": "3.11.0"
